install-examples/ingresses/cluster-adcs-ingress-tls.yaml
---
# https://cert-manager.io/docs/usage/ingress/ annotations 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: adcs-issuer
  annotations:

    cert-manager.io/issuer: "adcs-cluster-issuer" #use specific name of issuer
    cert-manager.io/issuer-kind: "ClusterAdcsIssuer" #or AdcsIssuer
    cert-manager.io/issuer-group: "adcs.certmanager.csf.nokia.com"

    #(optional) this annotation allows you to configure spec.commonName for the Certificate to be generated.
    cert-manager.io/common-name: "echo1.example.com" # common name should be added
    
    # (optional) this annotation allows you to configure spec.emailAddresses field for the Certificate to be generated. Supports comma-separated values e.g. "me@example.com,you@example.com"
    cert-manager.io/email-sans: "me@example.com,you@example.com" 
    
    #(optional) this annotation allows you to configure spec.subject.organizations field for the Certificate to be generated. Supports comma-separated values e.g. "Company 1,Company 2"
    cert-manager.io/subject-organizations: "Company 1,Company 2" 
    
    #(optional) this annotation allows you to configure spec.subject.organizationalUnits field for the Certificate to be generated. Supports comma-separated values e.g. "IT Services,Cloud Services"
    cert-manager.io/subject-organizationalunits: "IT Services, IT Solutions" 

    #(optional) this annotation allows you to configure spec.subject.countries field for the Certificate to be generated. Supports comma-separated values e.g. "Country 1,Country 2"
    cert-manager.io/subject-countries: "PL,AU" # NOTE only two characters long 

    #(optional) this annotation allows you to configure spec.subject.provinces field for the Certificate to be generated. Supports comma-separated values e.g. "Province 1,Province 2"
    cert-manager.io/subject-provinces: "Province 1, Province2" 

    # (optional) this annotation allows you to configure spec.subject.localities field for the Certificate to be generated. Supports comma-separated values e.g. "City 1,City 2"
    cert-manager.io/subject-localities: "City 1, City 2" 

    

    cert-manager.io/revision-history-limit: "5"
    cert-manager.io/renew-before:  40m

spec:
  tls:
  - hosts:
    - echo1.example.com
    - echo2.example.com
    secretName: echo-tls-for-ingress
  rules:
    - host: echo1.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: echo1
                port:
                  number: 80
    - host: echo2.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: echo2
                port:
                  number: 80
